--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <ul>
             <li>Bibiana.</li>
             <li>Jorge.</li>
-            <li>Integrantes.</li>
+            <li>Hernan Cely.</li>
             <li>Integrantes.</li>
        </ul> 
        <address>
