se agrego el apodo a hernan

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <ul>
             <li>Bibiana.</li>
             <li>Jorge.</li>
-            <li>Hernan Cely.</li>
+            <li>Hernan Cely-Nancito</li>
             <li>Integrantes.</li>
        </ul> 
        <address>
