--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>MISIÓN TIC 2022</title>
 </head>
 <body>
-   <h1>NOMBRE EQUIPO</h1>
+   <h1>DEVELOPERS TEAMS</h1>
    <p>
-       <b>
+       <strong>
        <ul>
-            <li>Bibiana.</li>
-            <li>Jorge.</li>
-            <li>Hernan Cely-Nancito</li>
-            <li>Integrantes.</li>
+            <li>La Voz - Bibiana Herrera.</li>
+            <li>Investigador - Jorge Londoño.</li>
+            <li>Desrrollador - Hernan Cely.</li>
+            <li>Matemático - Erasmo Martinez.</li>
+            <li>APH - Yeison Restrepo.</li>
        </ul> 
        <address>
             <a href="https://misiontic2022.unab.edu.co/">Visita Misión  TIC 2022</a>
         </address>
-    </b>
+        </strong>
    </p>
-
 </body>
 </html>
