--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <h1>DEVELOPERS TEAMS</h1>
+   <p><strong>Integrantes:</strong> </p>
    <p>
        <strong>
        <ul>
@@ -15,7 +16,7 @@
             <li>Investigador - Jorge Londoño.</li>
             <li>Desrrollador - Hernan Cely.</li>
             <li>Matemático - Erasmo Martinez.</li>
-            <li>APH - Yeison Restrepo.</li>
+            <li>Programador - Yeison Restrepo.</li>
        </ul> 
        <address>
             <a href="https://misiontic2022.unab.edu.co/">Visita Misión  TIC 2022</a>
