--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <ul>
             <li>La Voz - Bibiana Herrera.</li>
             <li>Investigador - Jorge Londoño.</li>
-            <li>Desrrollador - Hernan Cely.</li>
+            <li>Desarrollador - Hernan Cely.</li>
             <li>Matemático - Erasmo Martinez.</li>
             <li>Programador - Yeison Restrepo.</li>
        </ul> 
