--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li>La Voz - Bibiana Herrera.</li>
             <li>Investigador - Jorge Londoño.</li>
             <li>Desarrollador - Hernan Cely.</li>
-            <li>Matemático - Erasmo Martinez.</li>
+            <li>El Teacher - Erasmo Martinez.</li>
             <li>Programador - Yeison Restrepo.</li>
        </ul> 
        <address>
