--- a/index1.html
+++ b/index1.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MISIÓN TIC 2022</title>
+    <title>DEVELOPERS TEAM</title>
 </head>
-<body>
-   <h1>DEVELOPERS TEAMS</h1>
+<body bgcolor="#e1f5fe">
+   <h1>DEVELOPERS TEAM</h1>
    <p><strong>Integrantes:</strong> </p>
-   <p>
        <strong>
        <ul>
             <li>La Voz - Bibiana Herrera.</li>
@@ -22,6 +21,5 @@
             <a href="https://misiontic2022.unab.edu.co/">Visita Misión  TIC 2022</a>
         </address>
         </strong>
-   </p>
 </body>
 </html>
