--- a/index_formulario_v1.0.html
+++ b/index_formulario_v1.0.html
@@ -14,7 +14,8 @@
     <!--El atributo method define con qué método HTTP se envían
         los datos (generalmente get o post).-->
             
-    <form action="//dirección de envío" method="post">
+    <form action="/" method="post">
+      
         <ul>
          <li>
               <label for="name">Nombre:</label><!--Etiqueta de texto-->
