--- a/index_formulario_v1_3.html
+++ b/index_formulario_v1_3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CALCULADORA IMC EN LÍNEA </title>
-    <link rel="shortcut icon" href="favicon.png">
+    
     <!--Hojas de estilo css-->
     <!--Hojas de estilo css internas en html <style> </style>-->
     <!--llamado archivo externo css-->
@@ -14,7 +14,7 @@
     <!--Enlaces Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-       
+    <link rel="shortcut icon" type="image/png" href="favicon.png">  
 </head>
 
 
