--- a/index_formulario_v1_3.html
+++ b/index_formulario_v1_3.html
@@ -3,9 +3,12 @@
 <head>
   <style>
     body {
-      background-image: type="image/jpg" href="fondo.jpg");
+      background-image: url("paper.gif");
     }
-    </style>
+  </style> 
+    <div class="one"><video id="videofondo" class="video-background" poster="https://carontestudio.com/img/contacto.jpg" autoplay="autoplay" no-controls="" muted="muted" loop=""><source src="https://carontestudio.com/img/f1.mp4" type="video/mp4" ;="" codecs="avc1.42E01E, mp4a.40.2"></video></div>
+  
+  
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
